Fix `.about` layout on Firefox
Changing `width` unit makes the layout consistent across browsers at 1440px breakpoint

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -324,7 +324,7 @@ body.mobile-menu-open::after {
 	}
 
 	.about img {
-		width: 29.6%;
+		width: 29.5vw;
 	}
 
 	.about .copy {
